# arc-verifier

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  pyproject.toml  test_llm_api.py
arc_verifier/: __init__.py  __version__.py  api.py  audit_logger.py  backtester.py  benchmarker.py  cli.py  cli_old.py  core_verifier.py  data_fetcher.py  llm_judge.py  llm_judge_original.py  models.py  parallel_verifier.py  real_backtester.py  scanner.py  strategy_verifier.py  validator.py  verification_pipeline.py
arc_verifier/cli/: __init__.py
arc_verifier/core/: verifier.py
arc_verifier/data/: backtester.py  container_backtester.py
arc_verifier/security/: scanner.py  tee_validator.py
arc_verifier/tee/: __init__.py
arc_verifier/web/: requirements.txt
demo/: README.md  agents.txt  clean_api_demo.py  demo_api.py
demo/test-agent/: Dockerfile  agent.py
demo/test-agent2/: Dockerfile  arbitrage_agent.py  requirements.txt
demo/test-agent3/: Dockerfile  market_maker.js  package.json
demo/test-agents/: test_simple.py
docs/: API_REFERENCE.md  README.md  TEE_SETUP_GUIDE.md  cli-reference.md  getting-started.md  tee-simulation.md
examples/: Dockerfile.oracle  README.md  basic_tee_validation.py  demo_price_oracle.py  test_examples.sh
examples/test-agent/: Dockerfile  (+1 more)
internal_docs/: PERFORMANCE_VERIFICATION_FRAMEWORK.md  PHASE3_SUMMARY.md  PHASE_3B_PROGRESS.md  PHASE_3B_SIMPLIFIED_PLAN.md  PHASE_3B_V1_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION_PLAN.md  STRATEGY_VERIFICATION_FRAMEWORK.md  UPDATED_ROADMAP.md  V1_DELIVERY_STRATEGY.md
market_data/: README.md
scripts/: download_market_data.py  install_trivy.sh  live_testing_demo.sh  run_tests.sh  setup_docker.sh
tests/: QA_COMPREHENSIVE_SCRIPT.md  test_backtester.py  test_benchmarker.py  test_cli.py  test_cli_integration.py  test_data_fetcher.py  test_llm_judge.py  test_scaling.py  test_scanner.py  test_simulator.py  test_validator.py
(+16 files in other folders)
