[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arc_verifier*"]
exclude = ["internal_docs*"]

[project]
name = "arc-verifier"
version = "0.1.0"
description = "Lightweight agentic protocol verification tool for Agent Forts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "NEAR Protocol", email = "dev@near.org"},
]
keywords = ["near", "agents", "verification", "tee", "docker", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "docker>=6.0.0", 
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
arc-verifier = "arc_verifier.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "mypy>=1.4.0",
    "ruff>=0.1.0",
    "coverage>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "C", "I", "N", "UP", "YTT", "S", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.coverage.run]
source = ["arc_verifier"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]